# rubic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SPEC.md  fly.toml
crates/agent/: Cargo.toml
crates/agent/examples/: smoke.rs
crates/agent/src/: lib.rs
crates/core-ir/: Cargo.toml
crates/core-ir/src/: canonical.rs  digest.rs  lib.rs
crates/egglog-engine/: Cargo.toml
crates/egglog-engine/src/: lib.rs
crates/planner/: Cargo.toml
crates/planner/src/: graph.rs  lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/receipt/: Cargo.toml
crates/receipt/src/: lib.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  main.rs  mcp.rs  routes.rs  state.rs
examples/: agent_demo.toml  rbac_demo.toml  rules.egg
migrations/: 0001_init.sql
replays/: alice-delete-payroll.json  alice-read-payroll_summary.json  alice-write-payroll.json  support-bot-delete-db.users.json  support-bot-exec-db.migrations.json  support-bot-write-db.tickets.json
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.svelte  app.css
web/src/lib/: EgraphView.svelte  GraphView.svelte  ModelEditor.svelte  PlanTimeline.svelte  ReceiptPanel.svelte  api.ts
