[workspace]
resolver = "3"
members = [
    "crates/core-ir",
    "crates/policy",
    "crates/egglog-engine",
    "crates/planner",
    "crates/receipt",
    "crates/agent",
    "crates/replay",
    "crates/server",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.90"

[workspace.dependencies]
# Internal
core-ir         = { path = "crates/core-ir" }
policy          = { path = "crates/policy" }
egglog-engine   = { path = "crates/egglog-engine" }
planner         = { path = "crates/planner" }
receipt         = { path = "crates/receipt" }
agent           = { path = "crates/agent" }
replay          = { path = "crates/replay" }

# Errors / utils
anyhow     = "1.0"
thiserror  = "2.0"

# Serde
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml       = "1.1"

# Time / IDs
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
blake3        = "1.8"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand          = "0.8"

# Rewrite / graph
egglog   = { version = "2.0", default-features = false, features = ["serde"] }
egraph-serialize = "0.3"
petgraph = "0.8"

# Async / HTTP
tokio = { version = "1", features = ["full"] }
axum  = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = "1"

# Tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "time"] }

# OpenAPI
utoipa         = { version = "5", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[profile.release]
lto = "thin"
codegen-units = 1
