[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
core-ir    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
blake3     = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
time       = { workspace = true }

[[example]]
name = "smoke"
path = "examples/smoke.rs"

[[bin]]
name = "record-replay"
path = "src/bin/record_replay.rs"
