[package]
name = "core-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
blake3     = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
