[package]
name = "egglog-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
core-ir = { workspace = true }
egglog  = { workspace = true }
egraph-serialize = { workspace = true }
serde_json = { workspace = true }
anyhow  = { workspace = true }
thiserror = { workspace = true }
