[package]
name = "planner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
core-ir       = { workspace = true }
policy        = { workspace = true }
egglog-engine = { workspace = true }
petgraph      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
