[package]
name = "receipt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
core-ir       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
blake3        = { workspace = true }
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
time          = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
