[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "rubic-server"
path = "src/main.rs"

[dependencies]
core-ir       = { workspace = true }
policy        = { workspace = true }
egglog-engine = { workspace = true }
planner       = { workspace = true }
receipt       = { workspace = true }
agent         = { workspace = true }
replay        = { workspace = true }

tokio = { workspace = true }
axum  = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }

sqlx = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

ed25519-dalek = { workspace = true }
blake3        = { workspace = true }
rand          = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# MCP (Model Context Protocol) — exposes propose_assignment + verify_receipt
# tools at /mcp so users can drive rubic from their own Claude.
rmcp = { version = "1.7", default-features = false, features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }

anyhow    = { workspace = true }
thiserror = { workspace = true }
